--- a/client/src/components/TrendCard/TrendCard.css
+++ b/client/src/components/TrendCard/TrendCard.css
@@ -1,26 +1,36 @@
-.TrendCard{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: var(--cardColor);
-    padding: 1rem;
-    border-radius: 1rem;
-    padding-left: 2rem;
+.TrendCard {
+  display: flex;
+  flex-direction: column;
+  gap: 1
+  rem;
+  background-color: var(--cardColor);
+  padding: 1rem;
+  border-radius: 1rem;
+  padding-left: 2rem;
 }
 
-
-.trend{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+.trend {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
 }
 
+/* trend.css */
 
-.trend>span:nth-of-type(1)
-{
-    font-weight: bold;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
-.trend>span:nth-of-type(2)
-{
-    font-size: 13px;
+
+li {
+  margin-bottom: 10px;
+  gap: 5 rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: bold;
 }
