--- a/client/src/components/NewsFeed/NewsFeed.css
+++ b/client/src/components/NewsFeed/NewsFeed.css
@@ -1,44 +1,49 @@
 .NewsFeed {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: var(--cardColor);
-    padding: 1rem;
-    border-radius: 1rem;
-    padding-left: 2rem;
-  }
-  
-  /* .NewsFeed .ui.segment {
-    width: 100%;
-  } */
-  
-  /* .NewsFeed .ui.card {
-    margin: 1em 0;
-    width: 100%;
-  } */
-  
-  .NewsFeed .ui.card > .content {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .NewsFeed .h1 {
-    font-weight: bold;
-    font-size: 0.9em;
-  }
-  
-  .NewsFeed .ui.card > .content > .meta {
-    font-size: 0.9em;
-  }
-  
-  .NewsFeed .ui.card > .content > .description {
-    font-size: 1em;
-    line-height: 1.5;
-  }
-  
-  .NewsFeed .ui.card > .content > .image {
-    margin: 1em 0;
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--cardColor);
+  padding: 1rem;
+  border-radius: 1rem;
+  padding-left: 2rem;
+}
+
+.NewsFeed .ui.segment {
+  width: 50%;
+}
+
+.NewsFeed .ui.card {
+  margin: 1em 0;
+  width: 100%;
+}
+
+.NewsFeed .ui.card > .content {
+  display: flex;
+  flex-direction: column;
+}
+
+.NewsFeed .h1 {
+  font-weight: bold;
+  font-size: 0.5em;
+}
+
+.NewsFeed .ui.card > .content > .meta {
+  font-size: 0.9em;
+}
+
+.NewsFeed .ui.card > .content > .description {
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+.NewsFeed .ui.card > .content > .image {
+  margin: 1em 0;
+  width: fit-content;
+  height: 20px;
+  object-fit: contain;
+}
+
+.newsImage {
+  width: 50%;
+  height: 20%;
+}
